--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "expo": "^33.0.0",
+    "expo-location": "^5.0.1",
+    "ngrok": "^3.2.5",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
+    "react-native-elements": "^1.2.7",
+    "react-native-maps": "^0.26.1",
     "react-native-web": "^0.11.4",
     "react-navigation": "^3.11.0"
   },
